# BotsTeam

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Downloads - Shortcut.lnk  README.md  pyproject.toml  repos.md
.claude/: settings.local.json
.github/: copilot-instructions.md
bots/dashboard/: pyproject.toml
bots/dashboard/dashboard_cli/: __init__.py  cli.py
bots/gitbot/: README.md  pyproject.toml
bots/gitbot/gitbot/: analyzer.py  cli.py
bots/habitbot/: pyproject.toml
bots/habitbot/habitbot/: __init__.py  analyzer.py  cli.py
bots/journalbot/: pyproject.toml
bots/journalbot/journalbot/: __init__.py  analyzer.py  cli.py
bots/notebot/: pyproject.toml
bots/notebot/notebot/: analyzer.py  cli.py
bots/orchestrator/: README.md  pyproject.toml
bots/orchestrator/orchestrator/: __init__.py  bot_invoker.py  cli.py  registry.py  router.py
bots/orchestrator/tests/: test_bot_invoker.py  test_registry.py  test_router.py
bots/pagespeedbot/: pyproject.toml
bots/pagespeedbot/pagespeedbot/: analyzer.py  cli.py
bots/pagespeedbot/tests/: test_analyzer.py
bots/project_manager/: README.md  pyproject.toml
bots/project_manager/project_manager/: __init__.py  analyzer.py  cli.py  runner.py
bots/project_manager/tests/: test_analyzer.py  test_cli.py  test_runner.py
bots/qabot/: README.md  pyproject.toml
bots/qabot/qabot/: __init__.py  analyzer.py  cli.py  generator.py  runner.py
bots/qabot/tests/: test_cli.py  test_generator.py  test_qabot_analyzer.py  test_runner.py
bots/reportbot/: README.md  pyproject.toml
bots/reportbot/reportbot/: __init__.py  analyzer.py  cli.py
bots/reportbot/reportbot/prompts/: improve.md  review.md  translate.md
bots/reportbot/tests/: test_analyzer.py
bots/slackbot/: pyproject.toml
bots/slackbot/slackbot/: app.py  formatter.py  handler.py  intent.py
bots/taskbot/: pyproject.toml
bots/taskbot/taskbot/: __init__.py  analyzer.py  cli.py
bots/voicebot/: README.md  pyproject.toml
bots/voicebot/tests/: test_voicebot.py
bots/voicebot/voicebot/: __init__.py  analyzer.py  cli.py  language.py  transcriber.py
dashboard/: .gitignore  PWA.md  PWA_SUMMARY.md  README.md  activity.html  api.py  bots.html  calendar.html  generate_data.py  index.html  manifest.json  notes.html  projects.html  report.html  reports.html  server.py  service-worker.js  settings.html
dashboard/css/: base.css  components.css  layout.css  report-viewer.css  reset.css  responsive.css  variables.css
dashboard/icons/: generate_icons.py
dashboard/js/: activity.js  api.js  bots.js  calendar.js  components.js  config.js  dashboard.js  notes.js  project-admin.js  projects.js  report-generator.js  report-viewer.js  reports.js  settings.js  speech-output.js  sw-register.js  ui.js  utils.js  voice.js
dashboard/tests/: test_api.py
docs/: DASHBOARD.md  DIAGRAMS.md  STATUS.md  USAGE_GUIDE.md  architecture.md  bot-architecture.puml  bot-interactions.puml  context-design.md  dashboard-data-generation.md  dashboard-design.md  dashboard-implementation.md  dashboard-wireframes.md  data-flow.puml  proposed-structure-by-chatgpt.puml  roles-list.md  slack-integration.md  system-overview.puml
gitbot/: __init__.py  analyzer.py  cli.py
shared/: pyproject.toml
shared/shared/: __init__.py  bot_registry.py  config.py  data_manager.py  file_reader.py  git_reader.py  github_client.py  gitlab_client.py  issue_tracker.py  llm.py  models.py  report_export.py
shared/shared/providers/: anthropic.py  base.py  gemini.py  openai.py
shared/tests/: test_issue_tracker_clients.py  test_llm.py  test_report_export.py
slack-bot/: .gitignore  README.md  app.py  pyproject.toml
