[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitbot"
version = "0.1.0"
description = "AI-powered git history reviewer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.25.0",
    "gitpython>=3.1.40",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gitbot = "gitbot.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/gitbot"
Repository = "https://github.com/yourusername/gitbot"
