[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for devbots monorepo"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
    "python-gitlab>=4.0.0",
]
