[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for devbots monorepo"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "gitpython>=3.1.40",
    "Jinja2>=3.1.0",
    "Markdown>=3.6",
    "python-dotenv>=1.0.0",
    "python-gitlab>=4.0.0",
    "PyGithub>=2.0.0",
    "WeasyPrint>=62.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
