[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashboard-cli"
version = "0.1.0"
description = "DevBots Dashboard — web interface for projects and reports"
requires-python = ">=3.10"
dependencies = ["typer>=0.12.0", "rich>=13.7.0"]

[project.scripts]
dashboard = "dashboard_cli.cli:app"
