[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitbot"
version = "0.1.0"
description = "AI-powered habit and goal tracking analyzer"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
habitbot = "habitbot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
