[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Conversational bot orchestrator - knows projects and calls other bots"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "gitbot",
    "qabot",
    "project-manager",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:app"
devbot = "orchestrator.cli:app"

[tool.uv.sources]
shared = { workspace = true }
gitbot = { workspace = true }
qabot = { workspace = true }
project-manager = { workspace = true }
