[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagespeedbot"
version = "0.1.0"
description = "PageSpeed Insights collector for raw Lighthouse and CrUX data"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
pagespeedbot = "pagespeedbot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
