[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-manager"
version = "0.1.0"
description = "AI-powered GitLab issue analyzer and workload planner"
requires-python = ">=3.10"
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
pmbot = "project_manager.cli:app"

[tool.uv.sources]
shared = { workspace = true }
