[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qabot"
version = "0.1.0"
description = "AI-powered test suggestion and execution bot"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pytest>=7.0.0",
]

[project.scripts]
qabot = "qabot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
