[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reportbot"
version = "0.1.0"
description = "AI-powered markdown report reviewer and improver"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
reportbot = "reportbot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
