[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskbot"
version = "0.1.0"
description = "AI-powered personal task list analyzer"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "shared",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
taskbot = "taskbot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
