[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voicebot"
version = "0.1.0"
description = "Voice command interface for DevBots"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "shared",
    "orchestrator",
    "SpeechRecognition>=3.10.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
voicebot = "voicebot.cli:app"

[tool.uv.sources]
shared = { workspace = true }
orchestrator = { workspace = true }
